_versions/3.20/guides/jfr.adoc
////
This guide is maintained in the main Quarkus repository
and pull requests should be submitted there:
https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
////
[id="jfr"]
= Using Java Flight Recorder
include::_attributes.adoc[]
:categories: observability
:summary: This guide explains how Java Flight Recorder (JFR) can be extended to provide additional insight into your Quarkus application.
:topics: observability,jfr
:extensions: io.quarkus:quarkus-jfr

This guide explains how https://openjdk.org/jeps/328[Java Flight Recorder] (JFR) can be extended to provide additional insight into your Quarkus application.
JFR records various information from the Java standard API and JVM as events.
By adding the Quarkus JFR extension, you can add custom Quarkus events to JFR. This will help you solve potential problems in your application.

include::{includes}/observability-include.adoc[]

JFR can be preconfigured to dump a file, and when the application exits, JFR will output the file.
The file will contain the content of the JFR event stream to which Quarkus custom events have also been added.
You can, of course, get this file at any time you want, even if your application exits unexpectedly.

== Prerequisites

:prerequisites:
include::{includes}/prerequisites.adoc[]

== Architecture

In this guide, we create a straightforward REST application to demonstrate JFR usage.

== Creating the Maven project

First, we need a new project. Create a new project with the following command:

:create-app-artifact-id: jfr-quickstart
:create-app-extensions: quarkus-rest,quarkus-jfr
include::{includes}/devtools/create-app.adoc[]

This command generates the Maven project and imports the Quarkus JFR extension,
which includes the default JFR support.

If you already have your Quarkus project configured, you can add the JFR extension
to your project by running the following command in your project base directory:

:add-extension-extensions: quarkus-jfr
include::{includes}/devtools/extension-add.adoc[]

This will add the following to your build file:

[source,xml,role="primary asciidoc-tabs-target-sync-cli asciidoc-tabs-target-sync-maven"]
.pom.xml
----
<dependency>
    <groupId>io.quarkus</groupId>
    <artifactId>quarkus-jfr</artifactId>
</dependency>
----

[source,gradle,role="secondary asciidoc-tabs-target-sync-gradle"]
.build.gradle
----
implementation("io.quarkus:quarkus-jfr")
----

=== Examine the Jakarta REST resource

Create a `src/main/java/org/acme/jfr/JfrResource.java` file with the following content:

[source,java]
----
package org.acme.jfr;

import jakarta.ws.rs.GET;
import jakarta.ws.rs.Path;
import jakarta.ws.rs.Produces;
import jakarta.ws.rs.core.MediaType;

@Path("/hello")
public class JfrResource {

    @GET
    @Produces(MediaType.TEXT_PLAIN)
    public String hello() {
        return "hello";
    }
}
----

Notice that there is no JFR specific code included in the application. By default, requests sent to this
endpoint will be recorded into JFR without any required code changes.

=== Running Quarkus applications and JFR

Now we are ready to run our application.
We can launch the application with JFR configured to be enabled from the startup of the Java Virtual Machine.

:dev-additional-parameters: -Djvm.args="-XX:StartFlightRecording=name=quarkus,dumponexit=true,filename=myrecording.jfr"
include::{includes}/devtools/dev.adoc[]

With the Java Flight Recorder and the application running, we can make a request to the provided endpoint:

[source,shell]
----
$ curl http://localhost:8080/hello
hello
----

This is all that is needed to write the information to JFR.

=== Save the JFR events to a file

As mentioned above, the Quarkus application was configured to also start JFR at startup and dump it to a `myrecording.jfr` when it terminates.
So we can get the file when we hit `CTRL+C` or type `q` to stop the application.

Or, we can also dump it with the `jcmd` command.

[source,shell]
----
jcmd <PID> JFR.dump name=quarkus filename=myrecording.jfr
----

[NOTE]
====
Running the `jcmd` command give us a list of running Java processes and the PID of each process.
====

== Open JFR dump file

We can open a JFR dump using two tools: the `jfr` CLI and JDK Mission Control (JMC).
It is also possible to read them using JFR APIs, but we won't go into that in this guide.

=== jfr CLI

The `jfr` CLI is a tool included in OpenJDK. The executable file is `$JAVA_HOME/bin/jfr`.
We can use the jfr CLI to see a list of events limited to those related to Quarkus in the dump file by running the following command:

[source,shell]
----
jfr print --categories quarkus myrecording.jfr
----

=== JDK Mission Control

JMC is essentially a GUI for JFR.
Some Java distributions include JMC, but if not, you need to download it manually.

To see a list of events using JMC, first we load the JFR file in JMC as follows.

[source,shell]
----
jmc -open myrecording.jfr
----

After opening the JFR file, we have two options.
One is to view the events as a tabular list, and the other is to view the events on the threads in which they occurred, in chronological order.

To view Quarkus events in tabular style, select the Event Browser on the left side of JMC, then open the Quarkus event type tree on the right side of JMC.

image::jfr-event-browser.png[alt=JDK Mission Control Event Browser view,role="center"]

To see Quarkus events in chronological order on a thread, select the `Java application` and `Threads` on the left side of JMC.

image::jfr-java-ap-thread.png[alt=JDK Mission Control thread view,role="center"]

The standard configuration does not show Quarkus events.
We have to do three tasks to see the Quarkus events.

1. Right-click and select `Edit Thread Activity Lanes...`.
2. Select the plus button to add a new lane on the left side, then check to display that lane.
3. Select Quarkus as the event type that lane will display and press OK.

image::jfr-edit-thread-activity-lanes.png[alt=JDK Mission Control Edit Thread Activity Lanes,role="center"]

Now we can see the Quarkus events per thread.

image::jfr-thread.png[alt=JDK Mission Control thread view,role="center"]

[NOTE]
====
This extension is able to records multiple JFR events concurrently (emitted by different threads or from the same thread in the case of the reactive execution model).
Thus, events might overlap in JMC.
This could make it difficult for you to see the events you want to see.
To avoid this, we recommend to use <<identifying-requests,Request IDs>> to filter events so that you only see the information about the requests you want to see.
====

== Events

[[identifying-requests]]
=== Identifying Requests

This extension collaborates with the OpenTelemetry extension.
The events recorded by this extension have a trace ID and a span ID. These are recorded with the OpenTelemetry IDs respectively.

This means that after we identify the trace and span IDs of interest from the UI provided by the OpenTelemetry implementation, we can immediately jump to the details in JFR using those IDs.

If we have not enabled the OpenTelemetry extension, this extension creates an ID for each request and links it to JFR events as a traceId.
In this case, the span ID will be null.

For now, Quarkus only records REST events, but we plan to use this ID to link each event to each other as we add more events in the future.

=== Event Implementation Policy

When JFR starts recording an event, the event does not record to JFR yet, but when it commits that event, the event is recorded.
Therefore, events that have started recording at dump time but have not yet been committed are not dumped.
This is unavoidable due to the design of JFR.
This means that events are not recorded forever if there are prolonged processing.
Therefore, you will not be aware of prolonged processing.

To solve this problem, Quarkus can also record start and end events at the beginning and end of processing.
These events are disabled by default.
However, we can enable these events in JFR, as described below.

=== REST API Event

This event is recorded when either the Quarkus REST or RESTEasy extension is enabled.
The following three JFR events are recorded as soon as REST server processing is complete.

REST::

  Records the time period from the start of the REST server process to the end of the REST server process.

RestStart::

  Records the start of the REST server process.

RestEnd::

  Records the end of the REST server process.

These events have the following information.

- HTTP Method
- URI
- Resource Class
- Resource Method
- Client

HTTP Method records the HTTP Method accessed by the client.
This will record a string of HTTP methods such as GET, POST, DELETE, and other general HTTP methods.

URI records the URI path accessed by the client.
This does not include host names or port numbers.

Resource Class records the class that was executed.
We can check whether the Resource Class was executed as expected by the HTTP Method and URI.

Resource Method records the method that was executed.
We can check if the Resource Method was executed as expected by the HTTP Method and URI.

Client records information about the accessing client.

=== Native Image

Native executables supports Java Flight Recorder.
This extension also supports native executables.

To enable JFR on native executables, it is usually built with `--enable-monitoring`.
However, we can enable JFR in Quarkus native executables by adding `jfr` to the configuration property `quarkus.native.monitoring`.
There are two ways to set up this configuration: by including it in the `application.properties` or by specifying it at build time.

The first method is to first configure settings in `application.properties`.

[source,properties]
----
quarkus.native.monitoring=jfr
----

Then build your native executable as usual:

include::{includes}/devtools/build-native.adoc[]

The second way is to pass `-Dquarkus.native.monitoring=jfr` at build time:

:build-additional-parameters: -Dquarkus.native.monitoring=jfr
include::{includes}/devtools/build-native.adoc[]
:build-additional-parameters:

Once you have finished building the native executable, you can run the native application with JFR as follows:

[source,shell]
----
target/your-application-runner -XX:StartFlightRecording=name=quarkus,dumponexit=true,filename=myrecording.jfr
----

[NOTE]
====
Note that at this time, Mandrel and GraalVM cannot record JFR for Windows native executables.
====

== JFR configuration

We can use the JFR CLI to configure the events that JFR will record.
The configuration file, JFC file, is in XML format, so we can modify it with a text editor.
However, it is recommended to use `jfr configure`, which is included in OpenJDK by default.

Here we create a configuration file in which REST Start and REST End events are recorded (they are not recorded by default):

[source,shell]
----
jfr configure --input default.jfc +quarkus.RestStart#enabled=true +quarkus.RestEnd#enabled=true --output custom-rest.jfc
----

This creates `custom-rest.jfc` as a configuration file with recording for RestStart and RestEnd enabled.

Now we are ready to run our application with the new settings.
We launch the application with JFR configured so that it is enabled from the startup of the Java Virtual Machine.

:dev-additional-parameters: -Djvm.args="-XX:StartFlightRecording=name=quarkus,settings=./custom-rest.jfc,dumponexit=true,filename=myrecording.jfr"
include::{includes}/devtools/dev.adoc[]
:dev-additional-parameters:

== Adding new events

This section is for those who would like to add new events to this extension.

We recommend that new events be associated with existing events.
Associations are useful when looking at the details of a process that is taking a long time.
For example, a general REST application retrieves the data needed for processing from a datastore.
If REST events are not associated with datastore events, it is impossible to know which datastore events were processed in each REST request.
When the two events are associated, we know immediately which datastore event was processed in each REST request.

[NOTE]
====
Datastore events are not implemented yet.
====

The Quarkus JFR extension provides a Request ID for event association.
See <<identifying-requests>> for more information on Request IDs.

In specific code, the following two steps are required.
First, implement `traceId` and `spanId` on the new event as follows
The `@TraceIdRelational` and `@SpanIdRelational` attached to these events will provide the association.

[source,java]
----
import io.quarkus.jfr.runtime.SpanIdRelational;
import io.quarkus.jfr.runtime.TraceIdRelational;
import jdk.jfr.Description;
import jdk.jfr.Event;
import jdk.jfr.Label;

public class NewEvent extends Event {

    @Label("Trace ID")
    @Description("Trace ID to identify the request")
    @TraceIdRelational
    protected String traceId;

    @Label("Span ID")
    @Description("Span ID to identify the request if necessary")
    @SpanIdRelational
    protected String spanId;

    // other properties which you want to add
    // setters and getters
}
----

Then you get the information to store in the event from the `IdProducer` object's `getTraceId()` and `getSpanId()`.

[source,java]
----
import io.quarkus.jfr.runtime.IdProducer;

public class NewInterceptor {

    @Inject
    IdProducer idProducer;

    private void recordedInvoke() {
        NewEvent event = new NewEvent();
        event.begin();

        // The process you want to measure

        event.end();
        if (endEvent.shouldCommit()) {
            event.setTraceId(idProducer.getTraceId());
            event.setSpanId(idProducer.getSpanId());
            // call other setters which you want to add
            endEvent.commit();
        }
    }
}
----

== Configuration Reference

include::{generated-dir}/config/quarkus-jfr.adoc[leveloffset=+1, opts=optional]
